@@ -6,58 +6,60 @@ class VerifiTest < Test::Unit::TestCase
   def setup
     @gateway = VerifiGateway.new(fixtures(:verify))
     
-    @creditcard = credit_card('4111111111111111')
+    @credit_card = credit_card('4111111111111111')
     
     #  Replace with your login and password for the Verifi test environment
     @options = {
-      :order_id => 37,
-      :email => "test@domain.com",   
-      :address => { 
-         :address1 => '164 Waverley Street', 
-         :address2 => 'APT #7', 
-         :country => 'US', 
-         :city => 'Boulder', 
-         :state => 'CO', 
-         :zip => 12345 
-         }     
+      :order_id => '37',
+      :email => "test@example.com",   
+      :billing_address => address
     }
+    
+    @amount = 100
   end
   
   def test_successful_purchase
-    assert response = @gateway.purchase(100, @creditcard, @options)
+    assert response = @gateway.purchase(@amount, @credit_card, @options)
     assert_success response
     assert_equal 'Transaction was Approved', response.message
     assert !response.authorization.blank?
   end
   
+  def test_unsuccessful_purchase
+    @credit_card.number = 'invalid'
+    
+    assert response = @gateway.purchase(@amount, @credit_card, @options)
+    assert_failure response
+    assert_equal 'Transaction was Rejected by Gateway', response.message
+  end
+  
   # FOR SOME REASON Verify DOESN'T MIND EXPIRED CARDS
   # I talked to support and they said that they are loose on expiration dates being expired.
   def test_expired_credit_card
-    @creditcard.year = (Time.now.year - 3) 
-    assert response = @gateway.purchase(100, @creditcard, @options)
+    @credit_card.year = (Time.now.year - 3) 
+    assert response = @gateway.purchase(@amount, @credit_card, @options)
     assert_success response
     assert_equal 'Transaction was Approved', response.message   
   end
     
   def test_successful_authorization
-    assert response = @gateway.authorize(100, @creditcard, @options)
+    assert response = @gateway.authorize(@amount, @credit_card, @options)
     assert_success response
     assert_equal 'Transaction was Approved', response.message
     assert response.authorization
   end
   
   def test_authorization_and_capture
-    amount = 100
-    assert authorization = @gateway.authorize(amount, @creditcard, @options)
+    assert authorization = @gateway.authorize(@amount, @credit_card, @options)
     assert_success authorization
     assert authorization
-    assert capture = @gateway.capture(amount, authorization.authorization, @options)  
+    assert capture = @gateway.capture(@amount, authorization.authorization, @options)  
     assert_success capture
     assert_equal 'Transaction was Approved', capture.message
   end
   
   def test_authorization_and_void
-    assert authorization = @gateway.authorize(100, @creditcard, @options)
+    assert authorization = @gateway.authorize(@amount, @credit_card, @options)
     assert_success authorization
     assert authorization
     assert void = @gateway.void(authorization.authorization, @options)
@@ -67,14 +69,13 @@ class VerifiTest < Test::Unit::TestCase
   
   # Credits are not enabled on test accounts, so this should always fail  
   def test_credit
-    assert response = @gateway.credit(100, @creditcard, @options)
+    assert response = @gateway.credit(@amount, @credit_card, @options)
     assert_match /Credits are not enabled/, response.params['responsetext']
     assert_failure response  
   end
   
   def test_authorization_and_void
-    amount = 100
-    assert authorization = @gateway.authorize(amount, @creditcard, @options)
+    assert authorization = @gateway.authorize(@amount, @credit_card, @options)
     assert_success authorization
     assert void = @gateway.void(authorization.authorization, @options)
     assert_success void
@@ -83,11 +84,10 @@ class VerifiTest < Test::Unit::TestCase
   end
   
   def test_purchase_and_credit
-    amount = 100
-    assert purchase = @gateway.purchase(amount, @creditcard, @options)
+    assert purchase = @gateway.purchase(@amount, @credit_card, @options)
     assert_success purchase
     
-    assert credit = @gateway.credit(amount, purchase.authorization, @options)
+    assert credit = @gateway.credit(@amount, purchase.authorization, @options)
     assert_success credit
     assert_equal 'Transaction was Approved', credit.message
   end
@@ -98,7 +98,7 @@ class VerifiTest < Test::Unit::TestCase
       :password => 'Y'
     )
     
-    assert response = gateway.purchase(100, @creditcard, @options)
+    assert response = gateway.purchase(@amount, @credit_card, @options)
     assert_equal 'Transaction was Rejected by Gateway', response.message
     assert_equal 'Authentication Failed', response.params['responsetext']
     
